--- a/final_project/index.html
+++ b/final_project/index.html
@@ -13,7 +13,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="http://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
+      href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
     />
     <link
       rel="stylesheet"
@@ -174,12 +174,12 @@
     ></script>
     <script
       type="text/javascript"
-      src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"
+      src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"
     ></script>
 
     <script
       type="text/javascript"
-      src="http://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
+      src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
     ></script>
 
     <script src="js/main.js"></script>
