--- a/final_project/index.html
+++ b/final_project/index.html
@@ -170,7 +170,7 @@
     </footer>
     <script
       type="text/javascript"
-      src="http://code.jquery.com/jquery-1.11.0.min.js"
+      src="https://code.jquery.com/jquery-1.11.0.min.js"
     ></script>
     <script
       type="text/javascript"
