--- a/final_project/services/index.html
+++ b/final_project/services/index.html
@@ -8,7 +8,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="http://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
+      href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
     />
     <link
       rel="stylesheet"
@@ -430,16 +430,16 @@
     </footer>
     <script
       type="text/javascript"
-      src="http://code.jquery.com/jquery-1.11.0.min.js"
+      src="https://code.jquery.com/jquery-1.11.0.min.js"
     ></script>
     <script
       type="text/javascript"
-      src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"
+      src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"
     ></script>
 
     <script
       type="text/javascript"
-      src="http://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
+      src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
     ></script>
 
     <script src="../js/main.js"></script>
